--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iqara online teaching</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" media="screen and (max-width:1000px)" href="/css/phone.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 </head>
